@@ -20,11 +20,15 @@ struct FPU
  */
 #define KSTACK (16 * 1024)
 
+#ifndef USE_PTHREADS
 static __inline Proc *getup(void) {
 	Proc *p;
 	__asm__(	"mr	%0, 1" : "=r" (p));
 	return *(Proc **)((unsigned long)p & ~(KSTACK - 1));
-};
+}
+#else
+extern	Proc*	getup(void);
+#endif
 
 #define	up	(getup())
 
